# monzo-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
scripts/: auth.py
src/monzo_mcp/: __init__.py  analysis.py  constants.py  models.py  monzo_client.py  server.py  utils.py
src/monzo_mcp/tools/: __init__.py  accounts.py  analysis.py  feed.py  pots.py  transactions.py
tests/: __init__.py  conftest.py  test_utils.py
